# freshrss-summary

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.py  auth.py  cli.py  cog.toml  config.example.yaml  config.py  db.py  docker-compose.yml  freshrss_client.py  logging_config.py  metrics.py  models.py  pipeline.py  pyproject.toml  requirements.txt  scheduler.py  scorer.py  telegram_digest.py
.github/workflows/: cd.yml  ci.yml  release.yml
docs/plans/: 2026-04-26-telegram-digest.md
docs/specs/: 2026-04-26-telegram-digest-design.md
docs/superpowers/plans/: 2026-05-07-feed-weights.md
docs/superpowers/specs/: 2026-04-26-ui-redesign-design.md  2026-05-07-feed-weights-design.md
helm/freshrss-summary/: Chart.yaml  values.yaml
helm/freshrss-summary/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
static/css/: app.css  login.css
static/js/: api.js  i18n.js  login.js  render.js  state.js  ui.js
templates/: index.html  login.html
tests/: conftest.py  test_app.py  test_app_routes.py  test_cli.py  test_db.py  test_freshrss_client.py  test_integration.py  test_pipeline.py  test_scorer.py  test_telegram_digest.py
