[project]
name = "freshrss-summary"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.2",
    "pydantic>=2.0",
    "starlette>=0.40.0",
    "uvicorn[standard]==0.42.0",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "sqlalchemy==2.0.48",
    "aiosqlite==0.22.1",
    "prometheus-client==0.24.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
